# PrimeNumberMiner

./: CMakeLists.txt  main.cpp
output/Debug/: prime_distribution.txt  primes.txt
